[tool.poetry]
name = "customer sentiment analysis"
version = "0.1.0"
description = "Customer Sentiment Analysis for Hotel/Hospitality Sector"
authors = ["Akshat Pande <mail@pandeakshat.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
nltk = "^3.9.1"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
wordcloud = "^1.9.3"
streamlit = "^1.38.0"
gensim = "^4.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
